--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
   <link rel="icon" type="image/png" sizes="64x64" href="%PUBLIC_URL%/assets/images/favicon/favicon-192x192.png">
   <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/assets/images/favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/assets/images/favicon/favicon-16x16.png">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/> 
 </head>
 
 <body>
